[gd_scene load_steps=10 format=1]

[ext_resource path="res://addons/tileset_editor/editor.gd" type="Script" id=1]
[ext_resource path="res://addons/tileset_editor/icons/icon_add.png" type="Texture" id=2]
[ext_resource path="res://addons/tileset_editor/icons/icon_remove.png" type="Texture" id=3]
[ext_resource path="res://addons/tileset_editor/icons/icon_grid.png" type="Texture" id=4]
[ext_resource path="res://addons/tileset_editor/icons/icon_static_body_2d.png" type="Texture" id=5]
[ext_resource path="res://addons/tileset_editor/icons/icon_light_occluder_2d.png" type="Texture" id=6]
[ext_resource path="res://addons/tileset_editor/icons/icon_navigation_2d.png" type="Texture" id=7]
[ext_resource path="res://addons/tileset_editor/icons/icon_del.png" type="Texture" id=8]
[ext_resource path="res://addons/tileset_editor/icons/icon_import_from_scene.png" type="Texture" id=9]

[node name="editor" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 24.0
margin/right = 964.0
margin/bottom = 564.0
popup/exclusive = false
window/title = "Tileset Editor"
script/script = ExtResource( 1 )
texture_list_path = NodePath("VBoxContainer/HBoxContainer/texture_list_container/list_textures")
texture_view_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/ScrollContainer/texture_view")
overlay_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/ScrollContainer/texture_view/overlay")
tool_layout_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar/tool_layout")
tool_collision_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar/tool_collision")
tool_occluder_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar/tool_occluder")
tool_navpoly_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar/tool_navpoly")
layout_toolbox_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools")
shape_toolbox_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools")
shape_list_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/shape_list")
layout_x_off_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/x_off")
layout_y_off_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/y_off")
layout_w_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/width")
layout_h_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/height")
layout_x_sep_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/x_sep")
layout_y_Sep_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer/y_sep")
export_path = NodePath("VBoxContainer/HBoxContainer 2/export")
add_texture_path = NodePath("VBoxContainer/HBoxContainer/texture_list_container/HBoxContainer/add_texture")
del_texture_path = NodePath("VBoxContainer/HBoxContainer/texture_list_container/HBoxContainer/del_texture")
attach_shapes_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1/attach_shape")
deattach_shapes_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1/deattach_shape")
import_shapes_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1/import_shape")
remove_shapes_path = NodePath("VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1/remove_shape")

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
alignment = 0

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 884.0
margin/bottom = 496.0
split/offset = 0
split/collapsed = false
split/dragger_visibility = 0

[node name="texture_list_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 496.0
alignment = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/texture_list_container"]

rect/min_size = Vector2( 120, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 14.0
text = "Textures:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="list_textures" type="ItemList" parent="VBoxContainer/HBoxContainer/texture_list_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 18.0
margin/right = 120.0
margin/bottom = 470.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/texture_list_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 474.0
margin/right = 120.0
margin/bottom = 496.0
alignment = 0

[node name="add_texture" type="Button" parent="VBoxContainer/HBoxContainer/texture_list_container/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 28.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false

[node name="del_texture" type="Button" parent="VBoxContainer/HBoxContainer/texture_list_container/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 0.0
margin/right = 60.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 0.0
margin/right = 884.0
margin/bottom = 496.0
split/offset = 0
split/collapsed = false
split/dragger_visibility = 0

[node name="central_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 540.0
margin/bottom = 496.0
alignment = 0

[node name="toolbar" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 540.0
margin/bottom = 22.0
alignment = 0

[node name="tool_layout" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 72.0
margin/bottom = 22.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Layout"
icon = ExtResource( 4 )
flat = false

[node name="tool_collision" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 76.0
margin/top = 0.0
margin/right = 161.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Collision"
icon = ExtResource( 5 )
flat = false

[node name="tool_occluder" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 165.0
margin/top = 0.0
margin/right = 253.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Occluder"
icon = ExtResource( 6 )
flat = false

[node name="tool_navpoly" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/toolbar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 257.0
margin/top = 0.0
margin/right = 338.0
margin/bottom = 22.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Navpoly"
icon = ExtResource( 7 )
flat = false

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 26.0
margin/right = 540.0
margin/bottom = 496.0
scroll/horizontal = true
scroll/vertical = true
__meta__ = { "_edit_lock_":true }

[node name="texture_view" type="TextureFrame" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/ScrollContainer"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
stretch_mode = 0
__meta__ = { "_edit_lock_":true }

[node name="overlay" type="Control" parent="VBoxContainer/HBoxContainer/HSplitContainer/central_container/ScrollContainer/texture_view"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="sidebar_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 552.0
margin/top = 0.0
margin/right = 752.0
margin/bottom = 496.0
alignment = 0

[node name="layout_tools" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 226.0
alignment = 0

[node name="title" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 16.0
alignment = 0

[node name="icon" type="TextureFrame" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 16.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 1.0
margin/right = 62.0
margin/bottom = 15.0
text = "Layout"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = 200.0
margin/bottom = 23.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 27.0
margin/right = 200.0
margin/bottom = 191.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 55.0
margin/bottom = 19.0
text = "X Offset:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="x_off" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 24.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 33.0
margin/right = 55.0
margin/bottom = 47.0
text = "Y Offset:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="y_off" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 28.0
margin/right = 200.0
margin/bottom = 52.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label1" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 61.0
margin/right = 55.0
margin/bottom = 75.0
text = "Width:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="width" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 56.0
margin/right = 200.0
margin/bottom = 80.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 64.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 89.0
margin/right = 55.0
margin/bottom = 103.0
text = "Height:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="height" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 84.0
margin/right = 200.0
margin/bottom = 108.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 64.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 117.0
margin/right = 55.0
margin/bottom = 131.0
text = "H Separ:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="x_sep" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 112.0
margin/right = 200.0
margin/bottom = 136.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 145.0
margin/right = 55.0
margin/bottom = 159.0
text = "V Separ:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="y_sep" type="SpinBox" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 59.0
margin/top = 140.0
margin/right = 200.0
margin/bottom = 164.0
range/min = 0.0
range/max = 65535.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/layout_tools"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 195.0
margin/right = 200.0
margin/bottom = 226.0
text = "LMB: add tile\nRMB: remove tile"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="selection_tools" type="Control" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 230.0
margin/right = 200.0
margin/bottom = 230.0

[node name="shape_tools" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 234.0
margin/right = 200.0
margin/bottom = 496.0
alignment = 0

[node name="title" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 16.0
alignment = 0

[node name="icon" type="TextureFrame" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 16.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 1.0
margin/right = 75.0
margin/bottom = 15.0
text = "Collision"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = 200.0
margin/bottom = 23.0

[node name="shape_list" type="ItemList" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 27.0
margin/right = 200.0
margin/bottom = 236.0

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 240.0
margin/right = 200.0
margin/bottom = 262.0
alignment = 0

[node name="attach_shape" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1"]

hint/tooltip = "Add selected shapes to selected tiles"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 28.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false

[node name="deattach_shape" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1"]

hint/tooltip = "Remove selected shapes from selected tiles"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 0.0
margin/right = 60.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = false

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 0.0
margin/right = 67.0
margin/bottom = 22.0

[node name="import_shape" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1"]

hint/tooltip = "Import shapes from scene"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false

[node name="remove_shape" type="Button" parent="VBoxContainer/HBoxContainer/HSplitContainer/sidebar_container/shape_tools/HBoxContainer1"]

hint/tooltip = "Remove selected shapes from the list and every tile using them"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 0.0
margin/right = 131.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="HBoxContainer 2" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 500.0
margin/right = 884.0
margin/bottom = 520.0
custom_constants/separation = 15
alignment = 1
__meta__ = { "_edit_lock_":true }

[node name="export" type="Button" parent="VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 0.0
margin/right = 468.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Export"
flat = false

[node name="Sprite" type="Sprite" parent="."]

modulate = Color( 0.683594, 0.162888, 0.162888, 0.716981 )


